--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "moment-timezone": "^0.5.43",
+    "moonlink.js": "2.16.60",
     "node-cron": "^3.0.2"
   }
 }
