--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "xHyroM",
+  "author": "xhyrom",
   "license": "MIT",
   "dependencies": {
     "@types/node-cron": "^3.0.9",
